Initial support for `value` class output
When value classes are enabled with `--release 28 --enable-preview`, javac emits `ACC_IDENTITY` for all classes that _aren't_ `value` classes, and writes the special preview class file minor version for classes that use preview features.

PiperOrigin-RevId: 964699447